--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
-<body>
+	<head>
+		<meta charset="utf-8"/>
+		<title></title>
+		
+		<link rel="stylesheet" href="main-18px.css"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
+	</head>
+	
+	<body>
+	<header><img src="logo.png" style="float:right; postion:relative;"></header>
+	
+	<div id="content">
+	<h3>Mission</h3>
+<p>The Archive of New York City Cultural Policy is an advocacy resource for artists and cultural organizations, focused on the role of the City of New York as an official sponsor and supporter of cultural programs and organizations.</p>
+<p><strong>The Cultural Community Partnership with New York City</strong> is the active outreach program of the Archive, dedicated to informing cultural leaders and the community about the range of support traditionally provided by City government and guiding the public planning process.</p>
 
-<h1>Archive of New York City Cultural Policy</h1>
-<p>Body text here</p>
+<h3>The Archive</h3>
+<p>The Archive is a dynamic resource of historic records and contemporary thinking about the partnership between the cultural community and the City.  New York City has a unique record of supporting the arts and cultural activity, with a cultural budget larger than the federal government or any of the 50 states.  The cultural field supported by New York includes every traditional and experimental form of cultural expression, in the visual and performing arts and all other disciplines, and institutions devoted to history and the natural sciences, from historical societies to zoos and botanical gardens.</p>
+<p>The Archive has been established at the New York Public Library to guarantee its long-term preservation and maximum public access. It consists of historical and contemporary records, ranging from official government documents and published reports to oral history interviews and discussions recorded in the present moment.</p>
+<p>The Archive is a partner project of the Fund for the City of New York, which acts as its fiscal sponsor and receives charitable contributions.</p>
 
+<h3>Contact</h3>
+<p>Randall Bourscheidt<br/>
+<a href="mailto:randall.bourscheidt@gmail.com">email</a><br/>
+Phone: 212-799-5799
+</p> 
+</div>
 
-</body>
-
-
+	
+	</body>
+	
 </html>
