--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <p>The Archive has been established at the New York Public Library to guarantee its long-term preservation and maximum public access. It consists of historical and contemporary records, ranging from official government documents and published reports to oral history interviews and discussions recorded in the present moment.</p>
 <p>The Archive is a partner project of the Fund for the City of New York, which acts as its fiscal sponsor and receives charitable contributions.</p>
 
+<h3>Resources Currently Available</h3>
+<p><a href="Report-of-the-Mayors-Committee-on-Cultural-Policy-October-15-1974.pdf" target="_blank">Report of the Mayor's Committee on Cultural Policy, October 15, 1974 (PDF)</a></p>
+
 <h3>Contact</h3>
 <p>Randall Bourscheidt<br/>
 <a href="mailto:randall.bourscheidt@gmail.com">email</a><br/>
