--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <p>The Archive is a partner project of the Fund for the City of New York, which acts as its fiscal sponsor and receives charitable contributions.</p>
 
 <h3>Resources Currently Available</h3>
+<img src="1974-cover-250px.jpg">
 <p><a href="Report-of-the-Mayors-Committee-on-Cultural-Policy-October-15-1974.pdf" target="_blank">Report of the Mayor's Committee on Cultural Policy, October 15, 1974 (PDF)</a></p>
 
 <h3>Contact</h3>
