--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <h3>Resources Currently Available</h3>
 <img src="1974-cover-250px.jpg">
 <p><a href="Report-of-the-Mayors-Committee-on-Cultural-Policy-October-15-1974.pdf" target="_blank">Report of the Mayor's Committee on Cultural Policy, October 15, 1974 (PDF)</a></p>
+<img src="1983-cover-250px.jpg">
+<p><a href="June-1983-Cultural-Funding-Report-to-the-Mayor.pdf" target="_blank">Funding for Culture: The Cultural Policy of the City of New York. A Report to the Mayor by the Mayor's Advisory Commission for Cultural Affairs, June 1983 (PDF)</a></p>
 
 <h3>Contact</h3>
 <p>Randall Bourscheidt<br/>
-<a href="mailto:randall.bourscheidt@gmail.com">email</a><br/>
-Phone: 212-799-5799
 </p> 
 </div>
 
