--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
 <p>The Archive is a partner project of the Fund for the City of New York, which acts as its fiscal sponsor and receives charitable contributions.</p>
 
 <h3>Resources Currently Available</h3>
+<div style="float:left;">
+<div style="float:left; display:inline-block; width:50%">
 <img src="1974-cover-250px.jpg">
 <p><a href="Report-of-the-Mayors-Committee-on-Cultural-Policy-October-15-1974.pdf" target="_blank">Report of the Mayor's Committee on Cultural Policy, October 15, 1974 (PDF)</a></p>
+</div>
+<div style="padding-left:10px; float:left; display:inline-block; width:50%; box-sizing:border-box;">
 <img src="1983-cover-250px.jpg">
 <p><a href="June-1983-Cultural-Funding-Report-to-the-Mayor.pdf" target="_blank">Funding for Culture: The Cultural Policy of the City of New York. A Report to the Mayor by the Mayor's Advisory Commission for Cultural Affairs, June 1983 (PDF)</a></p>
+</div>
+</div>
 
 <h3>Contact</h3>
 <p>Randall Bourscheidt<br/>
